# ipp-printer-app

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: minimal_server.rs
src/: attributes.rs  device.rs  flags.rs  job.rs  lib.rs  mdns.rs  printer.rs  raster.rs  server.rs  state.rs  status.rs
tests/: discovery.rs  golden_ipp.rs
