[package]
name = "ipp-printer-app"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Florian Hänel <heeen.de@gmail.com>"]
repository = "https://github.com/heeen/ipp-printer-app"
homepage = "https://github.com/heeen/ipp-printer-app"
rust-version = "1.74"
description = "Pure-Rust IPP Everywhere framework for building CUPS-driverless printer applications"
readme = "README.md"
keywords = ["ipp", "cups", "printer", "axum", "driver"]
categories = ["network-programming", "web-programming::http-server", "hardware-support"]

[features]
default = ["mdns"]
mdns = ["dep:mdns-sd"]

[dependencies]
ipp = { version = "6", default-features = false }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
print_raster = "0.1"
bytes = "1"
http = "1"
log = "0.4"
bitflags = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
futures = "0.3"
num-traits = "0.2"
mdns-sd = { version = "0.19", optional = true }

[dev-dependencies]
ipp = { version = "6", default-features = false }
env_logger = "0.11"
